Fixed long-standing problem of overlapping between brand name link and language selector

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,3 +253,8 @@ body.grf .lang-ru {
 body.grf .lang-en {
 	display: none;
 }
+
+body.grf .navbar-brand {
+	padding-left: 0px;
+	margin-left: 0px !important;
+}
